- added nullity checks - adapted layout design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Rijksmuseum Search</string>
     <string name="main_fragment_title">Rijksmuseum Search</string>
     <string name="keyword_search_label">Search art objects from Rijksmuseum database with keywords</string>
+    <string name="tools_text_very_long_title">Long Title Long Title Long Title Long Title Long Title Long Title Long Title Long Title Long Title Long Title Long TitleLong Title Long Title Long Title Long Title Long Title Long Title Long Title Long Title Long Title Long Title Long Title Long Title Long TitleLong Title Long Title Long Title Long Title Long Title Long Title Long Title Long Title Long Title Long Title Long Title Long Title Long TitleLong Title Long Title</string>
 </resources>
